NFT's scrollbar relocation. Mobile menu fix.

--- a/style.css
+++ b/style.css
@@ -52,8 +52,8 @@ main > :not(.upsell), footer {
     border-radius: 2px;
 }
 
-.showcase {
-    overflow-x: scroll;
+.nft-s {
+    overflow-x: auto;
 }
 
 .dark1-text {
@@ -370,7 +370,7 @@ nav .fa-bars {
     height: 130px;
     width: 130px;
     transition: all 500ms ease-in-out;
-    transform: translateX(200%);
+    transform: translateX(100%);
 }
 
 #burger-check:checked ~ .scroll-down-menu ul {
